# LEARNING-OPENCV-3

./: README.md
capitulo_10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filters  filters.cpp  threshold  threshold_v2  threshold_v2.cpp  threshold_vs_adapthreshold  threshold_vs_adapthreshold.cpp
capitulo_11/: CMakeCache.txt  CMakeLists.txt  Makefile  affine_transformation  affine_transformation.cpp  cmake_install.cmake  excercises  excercises.cpp  log_polar_transformation  log_polar_transformation.cpp  perspective_transformation  perspective_transformation.cpp
capitulo_12/: CMakeCache.txt  CMakeLists.txt  Makefile  background_removal  background_removal.cpp  cmake_install.cmake  covolutions  covolutions.cpp  find_circles  find_circles.cpp  image_segmentation  image_segmentation.cpp
capitulo_13/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  excercise  excercise.cpp  hsv_histogram  hsv_histogram.cpp  signatures_histograms_EMD  signatures_histograms_EMD.cpp  template_matching  template_matching.cpp
capitulo_14/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  contours_using_trackbar  contours_using_trackbar.cpp  drawing_contours  drawing_contours.cpp  lebeled_conected_components  lebeled_conected_components.cpp  shape_contect_distance_extractor  shape_contect_distance_extractor.cpp
capitulo_15/: CMakeCache.txt  CMakeLists.txt  Makefile  background_model  background_model.cpp  background_substractor_clase  background_substractor_clase.cpp  cleanaup_connected_components  cleanaup_connected_components.cpp  cmake_install.cmake  codebook_algorithm  codebook_algorithm.cpp  on_off_diagonal_elements  on_off_diagonal_elements.cpp  rgb_values  rgb_values.cpp
capitulo_3/: CMakeCache.txt  CMakeLists.txt  Makefile  camera_usb  camera_usb.cpp  cmake_install.cmake  color_filter  color_filter.cpp  color_filter_image  color_filter_image.cpp  excercises  excercises.cpp  grabar_video  grabar_video.cpp  image_filter  image_filter.cpp  pixel_values  pixel_values.cpp  redimension_mitad_image  redimension_mitad_image.cpp  simple_image  simple_image.cpp  simple_video  simple_video.cpp  trackbar_video  trackbar_video.cpp
capitulo_4/: CMakeCache.txt  CMakeLists.txt  Makefile  better_matrix_print  better_sparse_matrix_print  better_sparse_matrix_print.cpp  cmake_install.cmake  excercises  excercises.cpp  print_nonzer_sparsearray  print_nonzer_sparsearray.cpp  sum_2matriz_using_narrayop  sum_2matriz_using_narrayop.cpp  sum_matrix_by_planes  sum_matrix_by_planes.cpp
capitulo_5/: CMakeCache.txt  CMakeLists.txt  Makefile  alphablend  alphablend.cpp  cmake_install.cmake  excercises  excercises.cpp
capitulo_6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  excercises  excercises.cpp
capitulo_7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  excercises  excercises.cpp  random_number_generator  random_number_generator.cpp
capitulo_8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  create_yaml_file  create_yaml_file.cpp  excercise_1  excercise_1.cpp  excercise_2  excercise_2.cpp  excercise_3  excercise_3.cpp  identify_video_codec  identify_video_codec.cpp  read_yaml_file  read_yaml_file.cpp  test.yml
capitulo_9/: CMakeCache.txt  CMakeLists.txt  Makefile  QMoviePlayer.cpp  QMoviePlayer.hpp  WxMoviePlayer.cpp  WxMoviePlayer.hpp  cmake_install.cmake  custom_view_class_header_example.cpp  draw_rectangle_using_mouse  excercise_4  excercise_4.cpp  excercise_5  excercise_5.cpp  excercises  excercises.cpp  open_image  open_image.cpp  qt_object_example.cpp  switch_with_trackbar  switch_with_trackbar.cpp  video_cube_draw  video_cube_draw.cpp  wx_movieplayer_object_example.cpp
images/: (239) Learn Blockchain, Solidity, and Full Stack Web3 Development with JavaScript – 32-Hour Course - YouTube.html
images/(239) Learn Blockchain, Solidity, and Full Stack Web3 Development with JavaScript – 32-Hour Course - YouTube_files/: annotations_module.js  base.js  captions.js  endscreen.js  inline_preview.js  miniplayer.js  remote.js
